--- a/atef/ui/str_list_elem.ui
+++ b/atef/ui/str_list_elem.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>404</width>
+    <width>174</width>
     <height>23</height>
    </rect>
   </property>
@@ -33,7 +33,14 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QLineEdit" name="line_edit"/>
+    <widget class="QLineEdit" name="line_edit">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QPushButton" name="del_button">
