--- a/atef/ui/config_overview_row.ui
+++ b/atef/ui/config_overview_row.ui
@@ -84,6 +84,13 @@
          </widget>
         </item>
         <item>
+         <widget class="QPushButton" name="delete_button">
+          <property name="text">
+           <string>DELETE CONFIG</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="horizontalSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
