--- a/atef/ui/config_group.ui
+++ b/atef/ui/config_group.ui
@@ -68,25 +68,7 @@
       </layout>
      </item>
      <item>
-      <widget class="QPushButton" name="add_tag_button">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>23</width>
-         <height>23</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>23</width>
-         <height>23</height>
-        </size>
-       </property>
+      <widget class="QToolButton" name="add_tag_button">
        <property name="text">
         <string>+</string>
        </property>
