--- a/atef/ui/happi_search_widget.ui
+++ b/atef/ui/happi_search_widget.ui
@@ -106,6 +106,12 @@
          <enum>QFrame::Raised</enum>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
+         <item>
+          <widget class="HappiDeviceListView" name="happi_list_view" native="true"/>
+         </item>
+         <item>
+          <widget class="HappiDeviceTreeView" name="happi_tree_view" native="true"/>
+         </item>
          <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="button_refresh">
            <property name="minimumSize">
@@ -133,6 +139,20 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>HappiDeviceListView</class>
+   <extends>QWidget</extends>
+   <header>happi.qt.model</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>HappiDeviceTreeView</class>
+   <extends>QWidget</extends>
+   <header>happi.qt.model</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
