--- a/atef/ui/happi_device_component.ui
+++ b/atef/ui/happi_device_component.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>753</width>
-    <height>608</height>
+    <width>729</width>
+    <height>494</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
     <widget class="QGroupBox" name="device_selection_group">
      <property name="title">
       <string>Device selection</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
+     <layout class="QVBoxLayout" name="verticalLayout" stretch="0">
       <property name="leftMargin">
        <number>0</number>
       </property>
@@ -38,6 +38,30 @@
      </layout>
     </widget>
    </item>
+   <item row="0" column="1">
+    <widget class="QGroupBox" name="component_info_group">
+     <property name="title">
+      <string>Component information</string>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="DeviceWidget" name="device_widget"/>
+      </item>
+     </layout>
+    </widget>
+   </item>
   </layout>
  </widget>
  <customwidgets>
@@ -45,6 +69,12 @@
    <class>HappiSearchWidget</class>
    <extends>QWidget</extends>
    <header>atef.widgets.happi</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>DeviceWidget</class>
+   <extends>QFrame</extends>
+   <header>atef.widgets.ophyd</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
