--- a/atef/ui/happi_device_component.ui
+++ b/atef/ui/happi_device_component.ui
@@ -13,53 +13,56 @@
   <property name="windowTitle">
    <string>Happi Item and Ophyd Component Selection</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QGroupBox" name="device_selection_group">
-     <property name="title">
-      <string>Device selection</string>
+  <layout class="QHBoxLayout" name="horizontalLayout">
+   <item>
+    <widget class="QSplitter" name="splitter">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout" stretch="0">
-      <property name="leftMargin">
-       <number>0</number>
+     <widget class="QGroupBox" name="device_selection_group">
+      <property name="title">
+       <string>Device selection</string>
       </property>
-      <property name="topMargin">
-       <number>0</number>
+      <layout class="QVBoxLayout" name="verticalLayout" stretch="0">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="HappiSearchWidget" name="item_search_widget" native="true"/>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QGroupBox" name="component_info_group">
+      <property name="title">
+       <string>Component information</string>
       </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
-       <number>0</number>
-      </property>
-      <item>
-       <widget class="HappiSearchWidget" name="item_search_widget" native="true"/>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="QGroupBox" name="component_info_group">
-     <property name="title">
-      <string>Component information</string>
-     </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0">
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
-       <number>0</number>
-      </property>
-      <item>
-       <widget class="OphydDeviceTableWidget" name="device_widget"/>
-      </item>
-     </layout>
+      <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="OphydDeviceTableWidget" name="device_widget"/>
+       </item>
+      </layout>
+     </widget>
     </widget>
    </item>
   </layout>
