--- a/atef/ui/ophyd_device_tree_widget.ui
+++ b/atef/ui/ophyd_device_tree_widget.ui
@@ -28,7 +28,17 @@
     <widget class="QLineEdit" name="edit_filter"/>
    </item>
    <item row="1" column="0" colspan="2">
-    <widget class="OphydDeviceTableView" name="device_table_view"/>
+    <widget class="OphydDeviceTableView" name="device_table_view">
+     <property name="sortingEnabled">
+      <bool>true</bool>
+     </property>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <attribute name="verticalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+    </widget>
    </item>
   </layout>
  </widget>
