--- a/atef/ui/happi_device_component.ui
+++ b/atef/ui/happi_device_component.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <widget class="QSplitter" name="splitter">
+    <widget class="QSplitter" name="splitter_main">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -41,27 +41,54 @@
        </item>
       </layout>
      </widget>
-     <widget class="QGroupBox" name="component_info_group">
-      <property name="title">
-       <string>Component information</string>
+     <widget class="QSplitter" name="splitter_md_component">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0">
-       <property name="leftMargin">
-        <number>0</number>
+      <widget class="QGroupBox" name="groupBox">
+       <property name="title">
+        <string>Happi Item Metadata</string>
        </property>
-       <property name="topMargin">
-        <number>0</number>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="HappiItemMetadataView" name="metadata_widget" native="true"/>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QGroupBox" name="component_info_group">
+       <property name="title">
+        <string>Component information</string>
        </property>
-       <property name="rightMargin">
-        <number>0</number>
-       </property>
-       <property name="bottomMargin">
-        <number>0</number>
-       </property>
-       <item>
-        <widget class="OphydDeviceTableWidget" name="device_widget"/>
-       </item>
-      </layout>
+       <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="OphydDeviceTableWidget" name="device_widget"/>
+        </item>
+       </layout>
+      </widget>
      </widget>
     </widget>
    </item>
@@ -78,6 +105,12 @@
    <class>OphydDeviceTableWidget</class>
    <extends>QFrame</extends>
    <header>atef.widgets.ophyd</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>HappiItemMetadataView</class>
+   <extends>QWidget</extends>
+   <header>atef.widgets.happi</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
