--- a/atef/ui/happi_metadata_view.ui
+++ b/atef/ui/happi_metadata_view.ui
@@ -33,7 +33,7 @@
       <bool>false</bool>
      </attribute>
      <attribute name="verticalHeaderStretchLastSection">
-      <bool>true</bool>
+      <bool>false</bool>
      </attribute>
     </widget>
    </item>
