--- a/atef/ui/ophyd_device_tree_widget.ui
+++ b/atef/ui/ophyd_device_tree_widget.ui
@@ -36,7 +36,7 @@
       <bool>true</bool>
      </attribute>
      <attribute name="verticalHeaderStretchLastSection">
-      <bool>true</bool>
+      <bool>false</bool>
      </attribute>
     </widget>
    </item>
