--- a/atef/ui/happi_search_widget.ui
+++ b/atef/ui/happi_search_widget.ui
@@ -86,6 +86,23 @@
     </layout>
    </item>
    <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="label_filter">
+       <property name="text">
+        <string>&amp;Filter</string>
+       </property>
+       <property name="buddy">
+        <cstring>edit_filter</cstring>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="edit_filter"/>
+     </item>
+    </layout>
+   </item>
+   <item>
     <widget class="QFrame" name="list_or_tree_frame">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
@@ -144,6 +161,13 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>radio_by_name</tabstop>
+  <tabstop>radio_by_category</tabstop>
+  <tabstop>combo_by_category</tabstop>
+  <tabstop>edit_filter</tabstop>
+  <tabstop>button_refresh</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
