--- a/atef/ui/ophyd_device_tree_widget.ui
+++ b/atef/ui/ophyd_device_tree_widget.ui
@@ -73,6 +73,13 @@
      </property>
     </widget>
    </item>
+   <item row="2" column="0">
+    <widget class="QPushButton" name="button_select_attrs">
+     <property name="text">
+      <string>Select</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <customwidgets>
