--- a/atef/ui/comp_float_gtlt.ui
+++ b/atef/ui/comp_float_gtlt.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>94</width>
     <height>31</height>
    </rect>
   </property>
@@ -54,19 +54,11 @@
     </widget>
    </item>
    <item>
-    <widget class="QLineEdit" name="value_edit">
-     <property name="font">
-      <font>
-       <pointsize>16</pointsize>
-      </font>
+    <layout class="QVBoxLayout" name="value_layout">
+     <property name="spacing">
+      <number>0</number>
      </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="placeholderText">
-      <string>0.0</string>
-     </property>
-    </widget>
+    </layout>
    </item>
    <item>
     <spacer name="horizontalSpacer">
