ENH: nitpick misc layout/usability details

--- a/atef/ui/config_value_edit.ui
+++ b/atef/ui/config_value_edit.ui
@@ -6,151 +6,169 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>186</width>
-    <height>192</height>
+    <width>163</width>
+    <height>199</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_7">
+  <layout class="QHBoxLayout" name="horizontalLayout_3">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
-    <widget class="QComboBox" name="bool_input">
+    <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <property name="text">
-       <string>False</string>
-      </property>
+      <widget class="QComboBox" name="bool_input">
+       <item>
+        <property name="text">
+         <string>False</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>True</string>
+        </property>
+       </item>
+      </widget>
      </item>
      <item>
-      <property name="text">
-       <string>True</string>
-      </property>
+      <widget class="QComboBox" name="enum_input"/>
      </item>
-    </widget>
+     <item>
+      <widget class="QWidget" name="epics_widget" native="true">
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <property name="spacing">
+         <number>6</number>
+        </property>
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="QLineEdit" name="epics_input"/>
+        </item>
+        <item>
+         <widget class="QLabel" name="epics_equals">
+          <property name="text">
+           <string>=</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="epics_value_preview">
+          <property name="text">
+           <string>?</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QToolButton" name="epics_refresh">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
+      <widget class="QWidget" name="happi_widget" native="true">
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="QPushButton" name="happi_select_component">
+          <property name="text">
+           <string>click to select</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="happi_equals">
+          <property name="text">
+           <string>=</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="happi_value_preview">
+          <property name="text">
+           <string>?</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QToolButton" name="happi_refresh">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="float_input"/>
+     </item>
+     <item>
+      <widget class="QSpinBox" name="int_input">
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+       <property name="minimum">
+        <number>-2147483647</number>
+       </property>
+       <property name="maximum">
+        <number>2147483647</number>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="str_input"/>
+     </item>
+    </layout>
    </item>
    <item>
-    <widget class="QComboBox" name="enum_input"/>
-   </item>
-   <item>
-    <widget class="QWidget" name="epics_widget" native="true">
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <property name="spacing">
-       <number>6</number>
-      </property>
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
-       <number>0</number>
-      </property>
-      <item>
-       <widget class="QLabel" name="epics_indicator">
-        <property name="text">
-         <string>EPICS:</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="epics_input"/>
-      </item>
-      <item>
-       <widget class="QLabel" name="epics_equals">
-        <property name="text">
-         <string>=</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="epics_value_preview">
-        <property name="text">
-         <string>?</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QToolButton" name="epics_refresh">
-        <property name="text">
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QWidget" name="happi_widget" native="true">
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
-       <number>0</number>
-      </property>
-      <item>
-       <widget class="QLabel" name="happi_indicator">
-        <property name="text">
-         <string>Happi:</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="happi_select_component">
-        <property name="text">
-         <string>click to select</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="happi_equals">
-        <property name="text">
-         <string>=</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="happi_value_preview">
-        <property name="text">
-         <string>?</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QToolButton" name="happi_refresh">
-        <property name="text">
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QLineEdit" name="float_input"/>
-   </item>
-   <item>
-    <widget class="QSpinBox" name="int_input">
-     <property name="minimum">
-      <number>-2147483647</number>
+    <widget class="QToolButton" name="select_mode_button">
+     <property name="text">
+      <string/>
      </property>
-     <property name="maximum">
-      <number>2147483647</number>
+     <property name="iconSize">
+      <size>
+       <width>8</width>
+       <height>16</height>
+      </size>
      </property>
     </widget>
-   </item>
-   <item>
-    <widget class="QLineEdit" name="str_input"/>
    </item>
   </layout>
  </widget>
