WIP: config gui opens checkpoint

--- a/atef/ui/configuration_group_page.ui
+++ b/atef/ui/configuration_group_page.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>165</height>
+    <height>322</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,7 +15,10 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QVBoxLayout" name="name_desc_tags_layout"/>
+    <widget class="QWidget" name="name_desc_tags_placeholder" native="true"/>
+   </item>
+   <item>
+    <widget class="QWidget" name="config_group_placeholder" native="true"/>
    </item>
    <item>
     <widget class="Line" name="line">
@@ -25,51 +28,34 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_5">
-     <property name="topMargin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QLabel" name="label_4">
-       <property name="text">
-        <string>Mode:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QComboBox" name="mode_combo"/>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer_4">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <widget class="QTableWidget" name="group_content_table"/>
+    <widget class="QTableWidget" name="config_Table"/>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPushButton" name="add_config_button">
+      <widget class="QPushButton" name="add_row_button">
        <property name="text">
         <string>+ Add Config</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QComboBox" name="select_type_combo"/>
+      <widget class="QComboBox" name="add_row_type_combo"/>
      </item>
     </layout>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
