ENH: make the group table work

--- a/atef/ui/configuration_group_row_widget.ui
+++ b/atef/ui/configuration_group_row_widget.ui
@@ -51,6 +51,28 @@
      </property>
     </widget>
    </item>
+   <item>
+    <widget class="QWidget" name="fixed_spacer" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>20</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>20</width>
+       <height>16777215</height>
+      </size>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
