ENH: the configuration group page behaves correctly now

--- a/atef/ui/configuration_group_page.ui
+++ b/atef/ui/configuration_group_page.ui
@@ -63,6 +63,12 @@
      <property name="selectionBehavior">
       <enum>QAbstractItemView::SelectRows</enum>
      </property>
+     <attribute name="horizontalHeaderVisible">
+      <bool>true</bool>
+     </attribute>
+     <attribute name="verticalHeaderVisible">
+      <bool>false</bool>
+     </attribute>
      <column>
       <property name="text">
        <string>Configurations</string>
