ENH: device config down to equals somewhat functional

--- a/atef/ui/name_desc_tags_widget.ui
+++ b/atef/ui/name_desc_tags_widget.ui
@@ -142,7 +142,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QFrame" name="frame">
+    <widget class="QFrame" name="desc_frame">
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
