--- a/atef/ui/comparison_row_widget.ui
+++ b/atef/ui/comparison_row_widget.ui
@@ -25,7 +25,17 @@
     <widget class="QLineEdit" name="name_edit"/>
    </item>
    <item>
-    <widget class="QComboBox" name="attr_combo"/>
+    <widget class="QComboBox" name="attr_combo">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="sizeAdjustPolicy">
+      <enum>QComboBox::AdjustToContents</enum>
+     </property>
+    </widget>
    </item>
    <item>
     <spacer name="horizontalSpacer">
@@ -34,8 +44,8 @@
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>100</width>
-       <height>17</height>
+       <width>40</width>
+       <height>20</height>
       </size>
      </property>
     </spacer>
